--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    </head><body>
-    
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Home</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="d-flex flex-column min-vh-100 bg-light">
+
+   <!-- Header con Barra de navegación -->
+
+    <header class="bg-primary text-white p-3">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="avisos.html">Avisos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
+                    <li class="nav-item"><a class="nav-link" href="materias2025.html">Materias 2025</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
+
+    <!-- Contenido principal - Main-->
+
+    <main class="container my-4 flex-grow-1">
+    <div>
+        <h1 class="text-primary">Materias que estoy cursando</h1>
+
+        <!-- Tabla de materias -->
+        <table class="table table-striped table-hover mt-3">
+            <thead class="table-dark">
+                <tr>
+                    <th>Materia</th>
+                    <th>Día</th>
+                    <th>Modalidad</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Arquitectura de Computadores</td>
+                    <td>Lunes</td>
+                    <td>Virtual</td>
+                </tr>
+                <tr>
+                    <td>Sistemas de Información I</td>
+                    <td>Martes</td>
+                    <td>Virtual</td>
+                </tr>
+                <tr>
+                    <td>Fundamentos de Informática</td>
+                    <td>Miércoles</td>
+                    <td>Virtual</td>
+                </tr>
+                <tr>
+                    <td>Marketing</td>
+                    <td>Jueves</td>
+                    <td>Virtual</td>
+                </tr>
+
+                <tr>
+                    <td>Diseño y Desarrollo Web</td>
+                    <td>Viernes</td>
+                    <td>Virtual</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</main>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center p-3 mt-auto">
+        <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
+    </footer>
+
+<!--Bootstrap JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
