--- a/sobremi.html
+++ b/sobremi.html
@@ -7,16 +7,47 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
-<body>
-    <div class="container">    
-        <h1>Sobre Mí...</h1>
-    <div style="position: relative; height: 240px;"> 
-        <img src="./foto perfil CV.jpg" alt="Foto personal" class="foto">
-    </div>
-</div>
+<body class="d-flex flex-column min-vh-100 bg-light">
+    <!-- Header con Barra de navegación -->
+
+       <header class="bg-primary text-white p-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="avisos.html">Avisos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
+                        <li class="nav-item"><a class="nav-link" href="materias2025.html">Materias 2025</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     
-    <h2>Historia Personal</h2>
-    <p>Mi nombre es María Alejandra Pantano. Desde siempre me ha interesado entender cómo funcionan las cosas a mi alrededor. Crecí rodeada de libros, tecnología y desafíos que me motivaron a aprender y a superar mis propios límites. Cada experiencia me ha llevado a descubrir mis fortalezas y a desarrollar habilidades que hoy definen mi camino profesional.</p>
+        <!-- Contenido principal - Main-->
+
+    <main class="container my-4 flex-grow-1">
+
+    <div class="container mt-4">
+        <!-- Sección del título y foto -->
+        <div class="row align-items-center">
+            <div class="col-md-8">
+                <h1 class="text-primary">Sobre mí</h1>
+            </div>
+            <div class="col-md-4 text-end">
+                <img src="./foto perfil CV.jpg" alt="Foto personal" class="img-fluid rounded-circle" style="width: 150px;">
+            </div>
+        </div>
+
+        <div class="card mt-4 p-3 mb-4">
+            <h2 class="text-secondary">Maria Alejandra Pantano</h2>
+        </div>
+    <p>Les doy la bienvenida y paso a contarles un poco sobre mí: Desde siempre me ha interesado entender cómo funcionan las cosas a mi alrededor. Crecí rodeada de libros, tecnología y desafíos que me motivaron a aprender y a superar mis propios límites. Cada experiencia me ha llevado a descubrir mis fortalezas y a desarrollar habilidades que hoy definen mi camino profesional.</p>
 
     <h2>Intereses y Conocimientos</h2>
     <ul>
@@ -32,9 +63,13 @@
 
     <p>Cada paso en mi camino profesional ha reforzado mi motivación y me ha enseñado la importancia de la colaboración y el aprendizaje constante.</p>
     
-    <h2>Contacto</h2>
-    <p>Puedes contactarme a través del siguiente enlace: <a href="mailto:mapantano@gmail.com">mapantano@gmail.com</a></p>
-
+</main>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center p-3 mt-auto">
+        <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
+    </footer>
+<!--Bootstrap JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
