--- a/contacto.html
+++ b/contacto.html
@@ -37,22 +37,22 @@
             <!-- Campo Nombre -->
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Escribe tu nombre">
+                <input type="text" class="form-control" id="nombre" placeholder="Escribí tu nombre">
             </div>
             <!-- Campo Correo Electrónico -->
             <div class="mb-3">
                 <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Escribe tu correo">
+                <input type="email" class="form-control" id="email" placeholder="Escribí tu correo">
             </div>
             <!-- Campo Asunto -->
             <div class="mb-3">
                 <label for="asunto" class="form-label">Asunto</label>
-                <input type="text" class="form-control" id="asunto" placeholder="Escribe el asunto">
+                <input type="text" class="form-control" id="asunto" placeholder="Escribí el asunto">
             </div>
             <!-- Campo Mensaje -->
             <div class="mb-3">
                 <label for="mensaje" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje"></textarea>
+                <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribí tu mensaje"></textarea>
             </div>
             <!-- Botón de Envío -->
             <button type="submit" class="btn btn-primary">Enviar</button>
