--- a/avisos.html
+++ b/avisos.html
@@ -1,81 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avisos</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="d-flex flex-column min-vh-100 bg-light">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Avisos</title>
+        <!-- Bootstrap -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+        <!-- Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+            rel="stylesheet">
 
-    <!-- Header con Barra de navegación -->
-    <header class="bg-primary text-white p-3">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link active" href="avisos.html">Avisos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link" href="materias2025.html">Materias 2025</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+        <!-- Estilos Propios -->
+        <link rel="stylesheet" href="./css/styles.css">
+    </head>
+    <body class="d-flex flex-column min-vh-100">
+
+        <!-- NAVBAR -->
+        <header class="bg-header p-3">
+            <nav class="navbar navbar-expand-lg navbar-dark container">
+                <div class="d-flex w-100 align-items-center">
+                    <a class="navbar-brand fw-bold text-white"
+                        href="index.html">
+                        Ma. Alejandra Pantano | Mi Cursada 2025
+                    </a>
+                    <button class="navbar-toggler ms-auto" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end"
+                    id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link active"
+                                href="avisos.html">Avisos</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="sobremi.html">Sobre mí</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="materias2025.html">Materias 2025</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
+            </nav>
+        </header>
+
+        <!-- CONTENIDO PRINCIPAL -->
+
+        <main class="container my-5 flex-grow-1">
+            <h1 class="text-center mb-4 titulo-principal">Avisos y Tareas del
+                Cuatrimestre</h1>
+
+            <div class="row g-4">
+                <div class="col-md-6">
+                    <div class="card-aviso sombra-tabla h-100">
+                        <div class="titulo-materia-card">Arquitectura de
+                            Computadores</div>
+                        <ul class="list-unstyled p-3">
+                            <li>07/04: Entrega TP</li>
+                            <li>21/04: Primer Parcial</li>
+                            <li>09/06: Segundo Parcial</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card-aviso sombra-tabla h-100">
+                        <div class="titulo-materia-card">Sistemas de Información
+                            I</div>
+                        <ul class="list-unstyled p-3">
+                            <li>29/04: Primer Parcial</li>
+                            <li>10/06: Entrega TP Obligatorio</li>
+                            <li>24/06: Segundo Parcial</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card-aviso sombra-tabla h-100">
+                        <div class="titulo-materia-card">Fundamentos de
+                            Informática</div>
+                        <ul class="list-unstyled p-3">
+                            <li>23/04: Primer Parcial</li>
+                            <li>18/06: Segundo Parcial</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card-aviso sombra-tabla h-100">
+                        <div class="titulo-materia-card">Marketing</div>
+                        <ul class="list-unstyled p-3">
+                            <li>24/04: Primer Parcial</li>
+                            <li>18/05: TP Grupal</li>
+                            <li>19/06: Segundo Parcial</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card-aviso sombra-tabla h-100">
+                        <div class="titulo-materia-card">Diseño y Desarrollo
+                            Web</div>
+                        <ul class="list-unstyled p-3">
+                            <li>25/04: Primer Parcial</li>
+                            <li>13/06: Segundo Parcial</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </nav>
-    </header>
+        </main>
 
-    <!-- Contenido principal -->
-    <main class="container my-4 flex-grow-1">
-        <h1 class="text-primary">Avisos y Tareas del Cuatrimestre</h1>
-        
-        <!-- Lista de avisos desordenada -->
-        <div class="mt-4">
-            <h2 class="text-secondary">Arquitectura de Computadores</h2>
-            <ul class="list-group mb-4">
-                <li class="list-group-item">07/04: Entrega TP</li>
-                <li class="list-group-item">21/04: Primer Parcial</li>
-                <li class="list-group-item">09/06: Segundo Parcial</li>
-            </ul>
+        <!-- FOOTER -->
+        <footer class="bg-footer text-white text-center p-3 mt-auto">
+            <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
+        </footer>
 
-            <h2 class="text-secondary">Sistemas de Información I</h2>
-            <ul class="list-group mb-4">
-                <li class="list-group-item">29/04: Primer Parcial</li>
-                <li class="list-group-item">10/06: Entrega TP Obligatorio</li>
-                <li class="list-group-item">24/06: Segundo Parcial</li>
-            </ul>
-
-            <h2 class="text-secondary">Fundamentos de Informática</h2>
-            <ul class="list-group mb-4">
-                <li class="list-group-item">23/04: Primer Parcial</li>
-                <li class="list-group-item">18/06: Segundo Parcial</li>
-            </ul>
-
-            <h2 class="text-secondary">Marketing</h2>
-            <ul class="list-group mb-4">
-                <li class="list-group-item">24/04: Primer Parcial</li>
-                <li class="list-group-item">18/05: TP Grupal</li>
-                <li class="list-group-item">19/06: Segundo Parcial</li>
-            </ul>
-
-            <h2 class="text-secondary">Diseño y Desarrollo Web</h2>
-            <ul class="list-group mb-4">
-                <li class="list-group-item">25/04: Primer Parcial</li>
-                <li class="list-group-item">13/06: Segundo Parcial</li>
-            </ul>
-        </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3 mt-auto">
-        <p>Hecho con &#10084;por Maria Alejandra Pantano</p>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        <!-- Bootstrap JS -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
 </html>
