--- a/contacto.html
+++ b/contacto.html
@@ -1,70 +1,97 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="d-flex flex-column min-vh-100 bg-light">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sobre mí | Mi Cursada 2025</title>
+        <!-- Bootstrap -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+        <!-- Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+            rel="stylesheet">
+        <!-- Estilos Propios -->
+        <link rel="stylesheet" href="./css/styles.css">
+    </head>
+    <body class="d-flex flex-column min-vh-100">
 
-    <!-- Header con Barra de navegación -->
-    <header class="bg-primary text-white p-3">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="avisos.html">Avisos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link" href="materias2025.html">Materias 2025</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contacto.html">Contacto</a></li>
+        <!-- NAVBAR -->
+        <header class="bg-header p-3">
+            <nav class="navbar navbar-expand-lg navbar-dark container">
+                <div class="d-flex w-100 align-items-center">
+                    <a class="navbar-brand fw-bold text-white"
+                        href="index.html">
+                        Ma. Alejandra Pantano | Mi Cursada 2025
+                    </a>
+                    <button class="navbar-toggler ms-auto" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end"
+                    id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link text-white"
+                                href="avisos.html">Avisos</a></li>
+                        <li class="nav-item"><a class="nav-link text-white"
+                                href="sobremi.html">Sobre mí</a></li>
+                        <li class="nav-item"><a class="nav-link text-white"
+                                href="materias2025.html">Materias 2025</a></li>
+                        <li class="nav-item"><a class="nav-link text-white"
+                                href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <!-- Contenido principal -->
-    <main class="container my-4 flex-grow-1">
-        <h1 class="text-primary">Contacto</h1>
-        
-        <form class="mt-4">
-            <!-- Campo Nombre -->
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Escribí tu nombre">
-            </div>
-            <!-- Campo Correo Electrónico -->
-            <div class="mb-3">
-                <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Escribí tu correo">
-            </div>
-            <!-- Campo Asunto -->
-            <div class="mb-3">
-                <label for="asunto" class="form-label">Asunto</label>
-                <input type="text" class="form-control" id="asunto" placeholder="Escribí el asunto">
-            </div>
-            <!-- Campo Mensaje -->
-            <div class="mb-3">
-                <label for="mensaje" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribí tu mensaje"></textarea>
-            </div>
-            <!-- Botón de Envío -->
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-    </main>
+        <!-- MAIN -->
+        <main class="container my-5 flex-grow-1">
+            <h1 class="text-center mb-4 titulo-principal">Estemos en
+                contacto</h1>
+            <p class="text-center text-muted subtitulo">Completá el formulario y
+                con gusto te responderé.</p>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3 mt-auto">
-        <p>Hecho con &#10084;</span> por Maria Alejandra Pantano</p>
-    </footer>
+            <div class="card-formulario">
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre"
+                            placeholder="Escribí tu nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo
+                            Electrónico</label>
+                        <input type="email" class="form-control" id="email"
+                            placeholder="Escribí tu correo">
+                    </div>
+                    <div class="mb-3">
+                        <label for="asunto" class="form-label">Asunto</label>
+                        <input type="text" class="form-control" id="asunto"
+                            placeholder="Escribí el asunto">
+                    </div>
+                    <div class="mb-4">
+                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="mensaje" rows="4"
+                            placeholder="Escribí tu mensaje"></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit"
+                            class="btn btn-custom">Enviar</button>
+                    </div>
+                </form>
+            </div>
+        </main>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+        <!-- FOOTER -->
+        <footer class="bg-footer text-white text-center p-3 mt-auto">
+            <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
+        </footer>
+
+        <!-- Bootstrap JS -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    </body>
 </html>
