--- a/index.html
+++ b/index.html
@@ -1,88 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Cursada 2025</title>
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="d-flex flex-column min-vh-100 bg-light">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet">
+    <!-- Estilos Propios -->
+    <link rel="stylesheet" href="./css/styles.css">
+  </head>
+  <body class="d-flex flex-column min-vh-100">
 
-   <!-- Header con Barra de navegación -->
+    <!-- NAVBAR -->
 
-    <header class="bg-primary text-white p-3">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Home</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="avisos.html">Avisos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
-                    <li class="nav-item"><a class="nav-link" href="materias2025.html">Materias 2025</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                </ul>
-            </div>
+    <header class="bg-header p-3">
+      <nav class="navbar navbar-expand-lg navbar-dark container">
+        <div class="d-flex w-100 align-items-center">
+          <a class="navbar-brand fw-bold text-white" href="index.html">
+            Ma. Alejandra Pantano | Mi Cursada 2025
+          </a>
+          <button class="navbar-toggler ms-auto" type="button"
+            data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
-    </nav>
-</header>
+        <div class="collapse navbar-collapse justify-content-end"
+          id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link text-white"
+                href="avisos.html">Avisos</a></li>
+            <li class="nav-item"><a class="nav-link text-white"
+                href="sobremi.html">Sobre mí</a></li>
+            <li class="nav-item"><a class="nav-link text-white"
+                href="materias2025.html">Materias 2025</a></li>
+            <li class="nav-item"><a class="nav-link text-white"
+                href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
+    <!-- MAIN -->
+    <main class="container my-5 flex-grow-1">
+      <h1 class="text-center mb-2 titulo-principal">Materias que estoy
+        cursando</h1>
+      <p class="text-center text-muted subtitulo">Primer cuatrimestre 2025
+        · UADE</p>
 
-    <!-- Contenido principal - Main-->
-
-    <main class="container my-4 flex-grow-1">
-    <div>
-        <h1 class="text-primary">Materias que estoy cursando</h1>
-
-        <!-- Tabla de materias -->
-        <table class="table table-striped table-hover mt-3">
-            <thead class="table-dark">
-                <tr>
-                    <th>Materia</th>
-                    <th>Día</th>
-                    <th>Modalidad</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Arquitectura de Computadores</td>
-                    <td>Lunes</td>
-                    <td>Virtual</td>
-                </tr>
-                <tr>
-                    <td>Sistemas de Información I</td>
-                    <td>Martes</td>
-                    <td>Virtual</td>
-                </tr>
-                <tr>
-                    <td>Fundamentos de Informática</td>
-                    <td>Miércoles</td>
-                    <td>Virtual</td>
-                </tr>
-                <tr>
-                    <td>Marketing</td>
-                    <td>Jueves</td>
-                    <td>Virtual</td>
-                </tr>
-
-                <tr>
-                    <td>Diseño y Desarrollo Web</td>
-                    <td>Viernes</td>
-                    <td>Virtual</td>
-                </tr>
-            </tbody>
+      <div class="table-responsive">
+        <table
+          class="table table-hover table-bordered sombra-tabla align-middle tabla-cursada">
+          <thead>
+            <tr>
+              <th class="text-start">Materia</th>
+              <th class="text-center">Día</th>
+              <th class="text-center">Modalidad</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="text-start">Arquitectura de Computadores</td>
+              <td class="text-center">Lunes</td>
+              <td class="text-center">Virtual</td>
+            </tr>
+            <tr>
+              <td class="text-start">Sistemas de Información I</td>
+              <td class="text-center">Martes</td>
+              <td class="text-center">Virtual</td>
+            </tr>
+            <tr>
+              <td class="text-start">Fundamentos de Informática</td>
+              <td class="text-center">Miércoles</td>
+              <td class="text-center">Virtual</td>
+            </tr>
+            <tr>
+              <td class="text-start">Marketing</td>
+              <td class="text-center">Jueves</td>
+              <td class="text-center">Virtual</td>
+            </tr>
+            <tr>
+              <td class="text-start">Diseño y Desarrollo Web</td>
+              <td class="text-center">Viernes</td>
+              <td class="text-center">Virtual</td>
+            </tr>
+          </tbody>
         </table>
-    </div>
-</main>
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3 mt-auto">
-        <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
+      </div>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="bg-footer text-white text-center p-3 mt-auto">
+      <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
     </footer>
 
-<!--Bootstrap JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
