--- a/materias2025.html
+++ b/materias2025.html
@@ -1,56 +1,104 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materias 2025</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="d-flex flex-column min-vh-100 bg-light">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Materias 2025</title>
+        <!-- Bootstrap -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet">
+        <!-- Google Fonts -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+            rel="stylesheet">
 
-    <!-- Header con Barra de navegación -->
-    <header class="bg-primary text-white p-3">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">Home</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="avisos.html">Avisos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="materias2025.html">Materias 2025</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+        <!-- Estilos propios -->
+        <link rel="stylesheet" href="./css/styles.css">
+    </head>
+
+    <body class="d-flex flex-column min-vh-100">
+
+    <!-- NAVBAR -->
+        <header class="bg-header p-3">
+            <nav class="navbar navbar-expand-lg navbar-dark container">
+                <div class="d-flex w-100 align-items-center">
+                    <a class="navbar-brand fw-bold text-white"
+                        href="index.html">
+                        Ma. Alejandra Pantano | Mi Cursada 2025
+                    </a>
+                    <button class="navbar-toggler ms-auto" type="button"
+                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end"
+                    id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link"
+                                href="avisos.html">Avisos</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="sobremi.html">Sobre mí</a></li>
+                        <li class="nav-item"><a class="nav-link active"
+                                href="materias2025.html">Materias 2025</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
+            </nav>
+        </header>
+
+    <!-- MAIN -->
+        <main class="container my-5 flex-grow-1">
+            <h1 class="text-center mb-4 titulo-principal">Materias del 1er
+                Cuatrimestre 2025</h1>
+            <p class="text-center text-muted subtitulo">Licenciatura en Gestión
+                IT
+                · UADE</p>
+
+            <div class="table-responsive sombra-tabla">
+                <table class="table align-middle text-center">
+                    <thead class="bg-light-purple">
+                        <tr>
+                            <th class="text-center">Materia</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Arquitectura de Computadores</td>
+                        </tr>
+                        <tr>
+                            <td>Sistemas de Información I</td>
+                        </tr>
+                        <tr>
+                            <td>Fundamentos de Informática</td>
+                        </tr>
+                        <tr>
+                            <td>Marketing</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a
+                                    href="https://mapantano.github.io/dydwpaginademateria/"
+                                    target="_blank" class="link-materia">
+                                    Diseño y Desarrollo Web 🔗
+                                </a>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
             </div>
-        </nav>
-    </header>
+        </main>
 
-    <!-- Contenido principal -->
-    <main class="container my-4 flex-grow-1">
-        <h1 class="text-primary">Materias del 1er Cuatrimestre 2025</h1>
-        
-        <!-- Lista de materias -->
-        <ul class="list-group mt-4">
-            <li class="list-group-item">Arquitectura de Computadores</li>
-            <li class="list-group-item">Sistemas de Información I</li>
-            <li class="list-group-item">Fundamentos de Informática</li>
-            <li class="list-group-item">Marketing</li>
-            <li class="list-group-item">
-                <a href="https://mapantano.github.io/dydwpaginademateria/" target="_blank">Diseño y Desarrollo Web</a>
-            </li>
-        </ul>
-    </main>
+    <!-- FOOTER -->
+        <footer class="bg-footer text-white text-center p-3 mt-auto">
+            <p>Hecho con &#10084; por María Alejandra Pantano</p>
+        </footer>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center p-3 mt-auto">
-        <p>Hecho con &#10084; por Maria Alejandra Pantano</p>
-    </footer>
+        <!-- Bootstrap JS -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    </body>
 </html>
